--- a/style/styles.css
+++ b/style/styles.css
@@ -1,10 +1,8 @@
-
 body {
     background-color: #f5f5dc; 
     margin: 0;
     font-family: Arial, sans-serif;
 }
-
 
 h1 {
     background-color: #008000; 
@@ -24,10 +22,12 @@ body {
     height: 100vh;
     overflow: hidden;
 }
+
 main {
     flex: 1;
     overflow: auto;
 }
+
 footer {
     background-color: #008000; 
     text-align: center;
@@ -36,4 +36,18 @@ footer {
     bottom: 0;
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+}
+
+p {
+    color: black; 
+    margin-left: 120px;
+    font-size: 24px; 
+    max-width: 900px; 
+}
+
+ul {
+    margin-left: 150px;
+    list-style-position: inside; 
+    max-width: 700px;
+    font-size: 20px;
 }
