--- a/style/styles.css
+++ b/style/styles.css
@@ -51,3 +51,64 @@ ul {
     max-width: 700px;
     font-size: 20px;
 }
+
+.content {
+    display: flex;
+    align-items: flex-start; 
+    gap: 300px; 
+}
+
+.image-right {
+    margin-top: 20px; /* Coboară imaginea mai jos */
+    max-width: auto; /* Mărește lățimea maximă a imaginii */
+    height: 200px; /* Păstrează proporțiile imaginii */
+    border-radius: 8px; /* Colțuri rotunjite pentru imagine */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Umbră pentru imagine */
+}
+
+.bottom-centered-image {
+    text-align: center; /* Centrează imaginea pe orizontală */
+    margin: 20px 0 60px 0;
+}
+
+.bottom-centered-image img {
+    max-width: 400px; /* Dimensiunea maximă a imaginii */
+    height: auto; /* Păstrează proporțiile imaginii */
+    max-width: 700px;
+    border-radius: 8px; /* Colțuri rotunjite pentru imagine */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Umbră pentru imagine */
+    margin-top: 100px;
+    margin-bottom: 60px;
+}
+
+.centered-button {
+    text-align: center; /* Centrează butonul pe orizontală */
+    margin: 20px 650px; /* Adaugă spațiu deasupra și dedesubtul butonului */
+}
+
+.button {
+    display: inline-block; /* Face link-ul să arate ca un buton */
+    background-color: #008000; /* Culoarea de fundal a butonului */
+    color: white; /* Culoarea textului */
+    padding: 10px 20px; /* Spațiere internă */
+    text-decoration: none; /* Elimină sublinierea */
+    font-size: 18px; /* Dimensiunea textului */
+    border-radius: 5px; /* Colțuri rotunjite */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Umbră pentru buton */
+    transition: background-color 0.3s ease; /* Efect de tranziție pentru hover */
+}
+
+.button:hover {
+    background-color: #006400; /* Culoarea butonului la hover */
+}
+
+ol {
+    margin-left: 50px;
+    padding-left: 40px;
+    margin-top: 50px;
+    list-style-type: decimal; /* Asigură afișarea numerelor */
+    color: black; /* Asigură culoarea textului */
+    font-size: 16px; /* Dimensiunea textului */
+}
+
+
